[gd_scene load_steps=13 format=3 uid="uid://coejhw3qjdbil"]

[ext_resource type="Theme" uid="uid://hldgq62fqimu" path="res://main_theme.tres" id="1_k2mln"]
[ext_resource type="Script" path="res://scenes/ui/card_visuals.gd" id="2_7f5w6"]
[ext_resource type="StyleBox" uid="uid://52rhik2orpqx" path="res://scenes/cardui/card_base_stylebox.tres" id="2_swhiw"]
[ext_resource type="Texture2D" uid="uid://dkgr5w335h2wc" path="res://art/battle-axe.webp" id="3_48fg1"]
[ext_resource type="Texture2D" uid="uid://dry0ukoul54g6" path="res://art/white-star.png" id="4_8u4qd"]
[ext_resource type="Texture2D" uid="uid://cadetav0hgbe2" path="res://art/card_images/slice-n-dice.jpg" id="6_mr3jr"]
[ext_resource type="Texture2D" uid="uid://bdqe2t0g8hdxb" path="res://art/banner.png" id="7_3f0dk"]
[ext_resource type="Texture2D" uid="uid://clv4tgv2m6fbv" path="res://art/ManaCoin.webp" id="8_1ijte"]

[sub_resource type="LabelSettings" id="LabelSettings_k80ig"]
font_color = Color(0, 0, 0, 1)
outline_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m3m6j"]
bg_color = Color(0.694118, 0.701961, 0.666667, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="LabelSettings" id="LabelSettings_lrm81"]
font_size = 11
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_ts71y"]
RichTextLabel/colors/default_color = Color(0, 0, 0, 1)
RichTextLabel/colors/font_outline_color = Color(0, 0, 0, 1)
RichTextLabel/colors/font_selected_color = Color(0, 0, 0, 1)
RichTextLabel/colors/font_shadow_color = Color(0, 0, 0, 1)
RichTextLabel/colors/selection_color = Color(0, 0, 0, 1)
RichTextLabel/colors/table_border = Color(0, 0, 0, 1)
RichTextLabel/colors/table_even_row_bg = Color(0, 0, 0, 1)
RichTextLabel/colors/table_odd_row_bg = Color(0, 0, 0, 1)
RichTextLabel/constants/line_separation = 0
RichTextLabel/constants/outline_size = 0
RichTextLabel/constants/shadow_offset_x = 0
RichTextLabel/constants/shadow_offset_y = 0
RichTextLabel/constants/shadow_outline_size = 0
RichTextLabel/constants/table_h_separation = 0
RichTextLabel/constants/table_v_separation = 0
RichTextLabel/constants/text_highlight_h_padding = 0
RichTextLabel/constants/text_highlight_v_padding = 0
RichTextLabel/font_sizes/bold_font_size = 10
RichTextLabel/font_sizes/bold_italics_font_size = 10
RichTextLabel/font_sizes/italics_font_size = 10
RichTextLabel/font_sizes/mono_font_size = 10
RichTextLabel/font_sizes/normal_font_size = 10
RichTextLabel/fonts/bold_font = null
RichTextLabel/fonts/bold_italics_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/mono_font = null
RichTextLabel/fonts/normal_font = null
RichTextLabel/styles/focus = null
RichTextLabel/styles/normal = null

[node name="CardVisuals" type="Control"]
custom_minimum_size = Vector2(158, 220)
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_k2mln")
script = ExtResource("2_7f5w6")

[node name="PanelOriginal" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_swhiw")

[node name="Image" type="TextureRect" parent="PanelOriginal"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 125.0
grow_horizontal = 2
mouse_filter = 2
texture = ExtResource("3_48fg1")
expand_mode = 1
stretch_mode = 5

[node name="TitlePanel" type="Panel" parent="PanelOriginal"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 2
mouse_filter = 2

[node name="TitleColor" type="ColorRect" parent="PanelOriginal/TitlePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.737255, 0.737255, 1)

[node name="Title" type="Label" parent="PanelOriginal/TitlePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Card Title"
label_settings = SubResource("LabelSettings_k80ig")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CostPanel" type="Panel" parent="PanelOriginal"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 25.0
offset_bottom = 25.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="PanelOriginal/CostPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.756863, 0.713726, 0.388235, 1)

[node name="Cost" type="Label" parent="PanelOriginal/CostPanel"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextPanel" type="Panel" parent="PanelOriginal"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -90.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="PanelOriginal/TextPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.698039, 0.698039, 0.698039, 1)

[node name="CardText" type="RichTextLabel" parent="PanelOriginal/TextPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
bbcode_enabled = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m3m6j")

[node name="HoverGlow" type="ColorRect" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.756863, 0.713726, 0.388235, 1)

[node name="OuterMargin" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_edit_lock_ = true

[node name="Background" type="ColorRect" parent="Panel/OuterMargin"]
layout_mode = 2
mouse_filter = 2

[node name="InnerMargin" type="MarginContainer" parent="Panel/OuterMargin"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="Panel/OuterMargin/InnerMargin"]
layout_mode = 2
mouse_filter = 2

[node name="CardImage" type="TextureRect" parent="Panel/OuterMargin/InnerMargin/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 121.0
grow_horizontal = 2
texture = ExtResource("6_mr3jr")
expand_mode = 1
stretch_mode = 5

[node name="TitleBanner" type="TextureRect" parent="Panel/OuterMargin/InnerMargin/Panel"]
self_modulate = Color(0.756863, 0.713726, 0.388235, 1)
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
texture = ExtResource("7_3f0dk")
expand_mode = 1
stretch_mode = 5

[node name="CardName" type="Label" parent="Panel/OuterMargin/InnerMargin/Panel/TitleBanner"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -14.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
text = "Slice 'n' Dice"
label_settings = SubResource("LabelSettings_lrm81")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Panel/OuterMargin/InnerMargin/Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -95.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
color = Color(0.901961, 0.701961, 0.678431, 1)

[node name="CardText" type="RichTextLabel" parent="Panel/OuterMargin/InnerMargin/Panel/ColorRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 21)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -7.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_ts71y")
bbcode_enabled = true
text = "[center]Deal [color=red]6[/color] damage."
fit_content = true
shortcut_keys_enabled = false

[node name="Rarity" type="TextureRect" parent="Panel"]
unique_name_in_owner = true
modulate = Color(0.631373, 0.34902, 0.321569, 1)
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_bottom = 20.0
grow_horizontal = 0
texture = ExtResource("4_8u4qd")
expand_mode = 1
stretch_mode = 5

[node name="ManaCostImage" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_right = 20.0
offset_bottom = 20.0
texture = ExtResource("8_1ijte")
expand_mode = 1
stretch_mode = 5

[node name="ManaCost" type="Label" parent="Panel/ManaCostImage"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Traits" type="VBoxContainer" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(15, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 34.0
offset_right = 20.0
offset_bottom = -10.0
grow_vertical = 2
theme_override_constants/separation = 4

[node name="TextureRect" type="TextureRect" parent="Panel/Traits"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
texture = ExtResource("8_1ijte")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="Panel/Traits"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
texture = ExtResource("8_1ijte")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="Panel/Traits"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
texture = ExtResource("8_1ijte")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="Panel/Traits"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
texture = ExtResource("8_1ijte")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect5" type="TextureRect" parent="Panel/Traits"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
texture = ExtResource("8_1ijte")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect6" type="TextureRect" parent="Panel/Traits"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
texture = ExtResource("8_1ijte")
expand_mode = 1
stretch_mode = 5
